implementing order total price  and getting product from store
